vessels/bluesky/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bluesky
spec:
  serviceName: bluesky
  replicas: 1
  template:
    spec:
      containers:
        - name: bluesky
          image: ghcr.io/bluesky-social/pds:0.4
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: pds
              mountPath: /pds
      volumes:
        - name: pds
          persistentVolumeClaim:
            claimName: bluesky
