vessels/bluesky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluesky
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: bluesky
