vessels/bluesky/ingress.yaml
# Based on https://cprimozic.net/notes/posts/notes-on-self-hosting-bluesky-pds-alongside-other-services/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bluesky
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`super.fish`) && PathPrefix(`/xrpc`)
      kind: Rule
      services:
        - kind: Service
          name: bluesky
          port: 80
          scheme: http
          passHostHeader: true
  tls:
    secretName: super.fish

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bluesky-handle
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{subdomain:[a-z]+}.super.fish`) && Path(`/.well-known/atproto-did`)
      kind: Rule
      services:
        - kind: Service
          name: bluesky
          port: 80
          scheme: http
          passHostHeader: true
  tls:
    secretName: star.super.fish
